examples/bad/invalid_list_comparison.xp
intList = [1];

boolList = [True];

emptyIntList = tail intList;

emptyBoolList = tail boolList;

main = emptyIntList == emptyBoolList;
